tests/compile-fail/bitflags_flag_name_non_str.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/bitflags_flag_name_non_str.rs:5:23
  |
3 | / bitflags! {
4 | |     pub struct Flags1: u32 {
5 | |         #[flag_name = 42]
  | |                       ^^ expected `&str`, found integer
6 | |         const FLAG_A = 0b00000001;
7 | |     }
8 | | }
  | |_- expected because of the type of the constant

error[E0308]: mismatched types
 --> tests/compile-fail/bitflags_flag_name_non_str.rs:5:23
  |
3 | / bitflags! {
4 | |     pub struct Flags1: u32 {
5 | |         #[flag_name = 42]
  | |                       ^^ expected `&str`, found integer
6 | |         const FLAG_A = 0b00000001;
7 | |     }
8 | | }
  | |_- expected because of the type of the constant
